--- a/src/components/login/login.scss
+++ b/src/components/login/login.scss
@@ -1,1 +1,13 @@
 
+@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed');
+
+.signup-form {
+    font-family: "Roboto Condensed", sans-serif;
+    width: 60%;
+    margin-left: 20%;
+    margin-top: 80px;
+    align-content: center;
+    legend {
+        font-size: 30px;
+    }
+}
