ch(Heroku): Heroku Configuration
- Add heroku configurations

[#162868244]

--- a/src/components/login/login.scss
+++ b/src/components/login/login.scss
@@ -1,11 +1,12 @@
 
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed');
 
-.signup-form {
+.login-form {
     font-family: "Roboto Condensed", sans-serif;
     width: 60%;
     margin-left: 20%;
-    margin-top: 80px;
+    margin-top: 130px;
+    margin-bottom: 164px;
     align-content: center;
     legend {
         font-size: 30px;
